h264parse/h265parse: latent overflow when calculate fps
The calculation may have latent overflow and coverity reports:
*** CID 416745: Integer handling issues (OVERFLOW_BEFORE_WIDEN)
/subprojects/gst-plugins-bad/gst/videoparsers/gsth264parse.c: 3464 in gst_h264_parse_pre_push_frame()
3458 * equation can be simplified if the bitstream is conveying field rate
3459 * using time_scale / num_units_in_tick
3460 * => "n_frames = nFrames * (1 + nuit_field_based_flag) / 2".
3461 */
3462 scale_n = h264parse->parsed_fps_n * vui->num_units_in_tick
3463 * (1 + tim->nuit_field_based_flag);
>>> CID 416745: Integer handling issues (OVERFLOW_BEFORE_WIDEN)
>>> Potentially overflowing expression "h264parse->parsed_fps_d * vui->time_scale" with type "unsigned int" (32 bits, unsigned) is evaluated using 32-bit arithmetic, and then used in a context that expects an expression of type "guint64" (64 bits, unsigned).
3464 scale_d = h264parse->parsed_fps_d * vui->time_scale;